--- a/views/home/public/footer.html
+++ b/views/home/public/footer.html
@@ -1,17 +1,17 @@
 		<footer class="footer mt-20">
 		    <div class="container-fluid" id="foot">
 		        <p>Copyright &copy; 2016-2017 www.wfyvv.com <br>
-		            <a href="#" target="_blank">皖ICP备17002922号</a>  更多模板：<a href="http://www.mycodes.net/" target="_blank">源码之家</a><br>
+		            <a href="#" target="_blank">皖ICP备17002922号</a>  更多模板：<a href="#" target="_blank">源码之家</a><br>
 		        </p>
 		    </div>
 		</footer>
-		<script type="text/javascript" src="plugin/jquery/1.9.1/jquery.min.js"></script>
-		<script type="text/javascript" src="plugin/layer/3.0/layer.js"></script>
-		<script type="text/javascript" src="plugin/h-ui/js/H-ui.min.js"></script>
-		<script type="text/javascript" src="plugin/pifu/pifu.js"></script>
-		<script type="text/javascript" src="js/common.js"></script>
+		<script type="text/javascript" src="/static/home/plugin/jquery/1.9.1/jquery.min.js"></script>
+		<script type="text/javascript" src="/static/home/plugin/layer/3.0/layer.js"></script>
+		<script type="text/javascript" src="/static/home/plugin/h-ui/js/H-ui.min.js"></script>
+		<script type="text/javascript" src="/static/home/plugin/pifu/pifu.js"></script>
+		<script type="text/javascript" src="/static/home/js/common.js"></script>
 		<script> $(function(){ $(window).on("scroll",backToTopFun); backToTopFun(); }); </script>
-		<script type="text/javascript" src="plugin/jquery.SuperSlide/2.1.1/jquery.SuperSlide.min.js"></script>
+		<script type="text/javascript" src="/static/home/plugin/jquery.SuperSlide/2.1.1/jquery.SuperSlide.min.js"></script>
 		<script>
 			$(function(){
 				//幻灯片
