--- a/views/home/public/header.html
+++ b/views/home/public/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>老王个人博客 — 一个站在java开发之路上的草根程序员个人博客网站</title>
+<title>测试博客</title>
 <meta charset="utf-8">
 <meta name="renderer" content="webkit|ie-comp|ie-stand">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,16 +9,16 @@
 <meta http-equiv="Cache-Control" content="no-siteapp" />
 <meta name="keywords" content="个人博客,王风宇个人博客,个人博客系统,老王博客,王风宇">
 <meta name="description" content="Lao王博客系统，一个站在java开发之路上的草根程序员个人博客网站。">
-<LINK rel="Bookmark" href="favicon.ico" >
-<LINK rel="Shortcut Icon" href="favicon.ico" />
+<LINK rel="Bookmark" href="/static/home/img/favicon.ico" >
+<LINK rel="Shortcut Icon" href="/static/home/img/favicon.ico" />
 <!--[if lt IE 9]>
 <script type="text/javascript" src="/staticRes/js/html5shiv.js"></script>
 <script type="text/javascript" src="/staticRes/js/respond.min.js"></script>
 <![endif]-->
-<link rel="stylesheet" type="text/css" href="plugin/h-ui/css/H-ui.min.css" />
-<link rel="stylesheet" type="text/css" href="plugin/Hui-iconfont/1.0.8/iconfont.min.css" />
-<link rel="stylesheet" type="text/css" href="css/common.css" />
-<link rel="stylesheet" type="text/css" href="plugin/pifu/pifu.css" />
+<link rel="stylesheet" type="text/css" href="/static/home/plugin/h-ui/css/H-ui.min.css" />
+<link rel="stylesheet" type="text/css" href="/static/home/plugin/Hui-iconfont/1.0.8/iconfont.min.css" />
+<link rel="stylesheet" type="text/css" href="/static/home/css/common.css" />
+<link rel="stylesheet" type="text/css" href="/static/home/plugin/pifu/pifu.css" />
 <!--[if lt IE 9]>
 <link href="/staticRes/lib/h-ui/css/H-ui.ie.css" rel="stylesheet" type="text/css" />
 <![endif]-->
@@ -29,7 +29,7 @@
     <div class="navbar navbar-fixed-top">
         <div class="container cl">
             <a class="navbar-logo hidden-xs" href="index.html">
-                <img class="logo" src="img/logo.png" alt="Lao王博客" />
+                <img class="logo" src="/static/home/img/logo.png" alt="Lao王博客" />
             </a>
             <a class="logo navbar-logo-m visible-xs" href="index.html">Lao王博客</a>
             <a aria-hidden="false" class="nav-toggle Hui-iconfont visible-xs" href="javascript:void(0);" onclick="showSide();">&#xe667;</a>
@@ -49,7 +49,7 @@
                             <ul class="dropDown-menu menu radius box-shadow">
                                 <li><a href="/app/loginOut">退出</a></li>
                             </ul>-->
-                            <a href="/app/qq" onclick="layer.msg('正在通过QQ登入', {icon:16, shade: 0.1, time:0})" ><img class="avatar size-S" src="img/qq.jpg" title="登入">登入</a>
+                            <a href="/app/qq" onclick="layer.msg('正在通过QQ登入', {icon:16, shade: 0.1, time:0})" ><img class="avatar size-S" src="/static/home/img/qq.jpg" title="登入">登入</a>
                     </li>
                 </ul>
             </nav>
