--- a/views/home/public/banner.html
+++ b/views/home/public/banner.html
@@ -3,8 +3,8 @@
     <div class="slider">
         <div class="bd">
             <ul>
-                <li><a href="#" target="_blank"><img src="img/temp/banner1.jpg"></a></li>
-                <li><a href="#" target="_blank"><img src="img/temp/banner8.png"></a></li>
+                <li><a href="#" target="_blank"><img src="/static/home/img/temp/banner1.jpg"></a></li>
+                <li><a href="#" target="_blank"><img src="/static/home/img/temp/banner8.png"></a></li>
             </ul>
         </div>
         <ol class="hd cl dots">
