--- a/views/home/public/right.html
+++ b/views/home/public/right.html
@@ -117,7 +117,7 @@
 				<a href=""><strong>扫我关注</strong></a>
 			</div>
 			<div class="tab-category-item">
-				<img data-original="temp/gg.jpg" class="img-responsive lazyload" alt="响应式图片">
+				<img data-original="/static/home/temp/gg.jpg" class="img-responsive lazyload" alt="响应式图片">
 			</div>
 		</div>
 		
@@ -141,16 +141,16 @@
             </div>
             <div class="panel-body">
                 <ul class="recent">
-                    <div class="item"><img src="img/40.jpg" alt=""></div>
-                    <div class="item"><img src="img/40.jpg" alt=""></div>
-                    <div class="item"><img src="img/40.jpg" alt=""></div>
-                    <div class="item"><img src="img/40.jpg" alt=""></div>
-                    <div class="item"><img src="img/40.jpg" alt=""></div>
-                    <div class="item"><img src="img/40.jpg" alt=""></div>
-                    <div class="item"><img src="img/40.jpg" alt=""></div>
-                    <div class="item"><img src="img/40.jpg" alt=""></div>
-                    <div class="item"><img src="img/40.jpg" alt=""></div>
-                    <div class="item"><img src="img/40.jpg" alt=""></div>
+                    <div class="item"><img src="/static/home/img/40.jpg" alt=""></div>
+                    <div class="item"><img src="/static/home/img/40.jpg" alt=""></div>
+                    <div class="item"><img src="/static/home/img/40.jpg" alt=""></div>
+                    <div class="item"><img src="/static/home/img/40.jpg" alt=""></div>
+                    <div class="item"><img src="/static/home/img/40.jpg" alt=""></div>
+                    <div class="item"><img src="/static/home/img/40.jpg" alt=""></div>
+                    <div class="item"><img src="/static/home/img/40.jpg" alt=""></div>
+                    <div class="item"><img src="/static/home/img/40.jpg" alt=""></div>
+                    <div class="item"><img src="/static/home/img/40.jpg" alt=""></div>
+                    <div class="item"><img src="/static/home/img/40.jpg" alt=""></div>
                 </ul>
             </div>
         </div>
@@ -164,8 +164,4 @@
                 <div class="bdsharebuttonbox Hui-share"><a href="#" class="bds_weixin Hui-iconfont" data-cmd="weixin" title="分享到微信">&#xe694;</a><a href="#" class="bds_qzone Hui-iconfont" data-cmd="qzone" title="分享到QQ空间">&#xe6c8;</a> <a href="#" class="bds_sqq Hui-iconfont" data-cmd="sqq" title="分享到QQ好友">&#xe67b;</a> <a href="#" class="bds_tsina Hui-iconfont" data-cmd="tsina" title="分享到新浪微博">&#xe6da;</a> <a href="#" class="bds_tqq Hui-iconfont" data-cmd="tqq" title="分享到腾讯微博">&#xe6d9;</a></div>
             </div>
         </div>
-	
-	
-	
-
   </div>
