--- a/static/home/login/css/styles.css
+++ b/static/home/login/css/styles.css
@@ -6,7 +6,7 @@
 }
 body {
   font-family: 'Source Sans Pro', sans-serif;
-  color: white;
+  /*color: white;*/
   font-weight: 300;
 }
 body ::-webkit-input-placeholder {
