--- a/views/home/login/register.html
+++ b/views/home/login/register.html
@@ -1,51 +1,61 @@
 <!doctype html>
 <html lang="zh">
-<head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>CSS3方块动画背景登录界面模板</title>
-
-<link rel="stylesheet" type="text/css" href="css/styles.css">
-
-</head>
-<body>
-
-
-<div class="wrapper">
-
-	<div class="container">
-		<h1>Welcome</h1>
-		<form class="form">
-			<input type="text" placeholder="用户名">
-			<input type="password" placeholder="密码">
-			<button type="submit" id="login-button">登录</button>
-		</form>
-	</div>
-	
-	<ul class="bg-bubbles">
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
-	</ul>
-	
-</div>
-
-<script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
-<script type="text/javascript">
-$('#login-button').click(function(event){
-	event.preventDefault();
-	$('form').fadeOut(500);
-	$('.wrapper').addClass('form-success');
-});
-</script>
-
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>注册</title>
+		<link rel="stylesheet" type="text/css" href="/static/home/plugin/layer/3.0/skin/default/layer.css">
+		<link rel="stylesheet" type="text/css" href="/static/home/login/css/styles.css">
+	</head>
+	<body>
+		<div class="wrapper">
+			<div class="container">
+				<h1>Welcome Register</h1>
+				<form class="form">
+					<input type="text" id="username" placeholder="用户名">
+					<input type="text" id="phone" placeholder="手机号">
+					<button type="button" onclick = "register()">注册</button>
+				</form>
+			</div>	
+		</div>
+		<script type="text/javascript" src="/static/home/login/js/jquery-2.1.1.min.js"></script>
+		<script type="text/javascript" src="/static/home/plugin/layer/3.0/layer.js"></script>
+		<script type="text/javascript">
+			function register(){
+				var username = $("#username").val();
+				var phone    = $("#phone").val();
+				if(username == '' || username == null){
+					layer.msg("您好,请输入用户名",{icon:2})
+					return false;
+				}
+				if(phone == '' || phone == null){
+					layer.msg("您好,请输入手机号",{icon:2})
+					return false;
+				}
+				$.ajax({
+                    url:"{{urlfor "HLoginController.Regform"}}",
+                    type:'POST', 
+                    data:{
+                        "username":username,
+                        "phone":phone,
+                        "type":"register"
+                    },
+                    dataType:'json',
+                    success:function(data){
+                        if(data.status==1){
+                            layer.msg(data.msg,function(){
+                                window.location.href="/home/index/index.html";
+                            });
+                        }else{
+                            layer.msg(data.msg);
+                        }
+                    },
+                    error:function(){
+                        layer.msg("出错了");
+                    }
+                })
+			}
+		</script>
+	</body>
 </html>
