执行代码的测试提交

--- a/views/home/login/register.html
+++ b/views/home/login/register.html
@@ -38,7 +38,7 @@
                     type:'POST', 
                     data:{
                         "username":username,
-                        "phone":phone,
+                        "mobile":phone,
                         "type":"register"
                     },
                     dataType:'json',
