管理员添加编辑的操作

--- a/views/admin/public/left.html
+++ b/views/admin/public/left.html
@@ -18,7 +18,7 @@
         <a class="side-menu__item" data-toggle="slide" href="#"><i class="side-menu__icon fa fa-paw"></i><span class="side-menu__label">用户管理</span><i class="angle fa fa-angle-right"></i></a>
         <ul class="slide-menu">
             <li><a href="{{urlfor "AuserController.Hlist"}}" class="slide-item"> 用户列表</a></li>
-            <li><a href="icons-fontawesome.html" class="slide-item"> 管理员列表</a></li>
+            <li><a href="{{urlfor "AuserController.Alist"}}" class="slide-item"> 管理员列表</a></li>
             <li><a href="icons-feather.html" class="slide-item"> 登录日志</a></li>
         </ul>
     </li>
