--- a/views/admin/user/aedit.html
+++ b/views/admin/user/aedit.html
@@ -34,7 +34,7 @@
 					<div class="form-group row">
 						<label for="inputEmail3" class="col-md-3 col-form-label">密码:</label>
 						<div class="col-md-9">
-							<input type="text" class="form-control" id="Password" name="Password"   placeholder="密码在(6~16位之间,可以包含中英文,数字)">
+							<input type="password" class="form-control" id="Password" name="Password"  value="{{.alist.Password}}"  placeholder="密码在(6~16位之间,可以包含中英文,数字)">
 						</div>
 					</div>
 					<div class="form-group row">
