--- a/views/admin/public/header.html
+++ b/views/admin/public/header.html
@@ -171,17 +171,17 @@
                             <img src="/static/admin/img/avatar/avatar-1.jpeg.jpg" alt="profile-user" class="rounded-circle w-32">
                             <div class="d-sm-none d-lg-inline-block">Jessica Lee</div></a>
                             <div class="dropdown-menu dropdown-menu-right">
-                                <a href="profile.html" class="dropdown-item has-icon">
+                                <a href="#" class="dropdown-item has-icon">
                                     <i class="ion ion-android-person"></i> Profile
                                 </a>
-                                <a href="profile.html" class="dropdown-item has-icon">
+                                <a href="#" class="dropdown-item has-icon">
                                     <i class="ion-android-drafts"></i> Messages
                                 </a>
-                                <a href="profile.html" class="dropdown-item has-icon">
+                                <a href="#" class="dropdown-item has-icon">
                                     <i class="ion ion-gear-a"></i> Settings
                                 </a>
-                                <a href="#" class="dropdown-item has-icon">
-                                    <i class="ion-ios-redo"></i> Logout
+                                <a href="{{urlfor "AloginController.Logout"}}" class="dropdown-item has-icon">
+                                    <i class="ion-ios-redo"></i> 退出
                                 </a>
                             </div>
                         </li>
