执行页面提交的操作

--- a/views/admin/public/left.html
+++ b/views/admin/public/left.html
@@ -10,7 +10,8 @@
         <ul class="slide-menu">
             <li><a href="elements.html" class="slide-item"> 文章管理</a></li>
             <li><a href="buttons.html" class="slide-item"> 标签管理</a></li>
-            <li><a href="toastr.html" class="slide-item"> 广告管理</a></li>
+            <li><a href="{{urlfor "ArticleController.Adver"}}" class="slide-item"> 广告管理</a></li>
+            <li><a href="{{urlfor "ArticleController.Aimage"}}" class="slide-item"> 文件上传</a></li>
             <li><a href="calender.html" class="slide-item"> 友链管理</a></li>
         </ul>
     </li>
