基于beego实现上传文件，前端使用layui

--- a/views/admin/public/left.html
+++ b/views/admin/public/left.html
@@ -13,6 +13,7 @@
             <li><a href="{{urlfor "ArticleController.Adver"}}" class="slide-item"> 广告管理</a></li>
             <li><a href="{{urlfor "ArticleController.Aimage"}}" class="slide-item"> 文件上传</a></li>
             <li><a href="calender.html" class="slide-item"> 友链管理</a></li>
+            <li><a href="{{urlfor "AtestController.Atest"}}" class="slide-item"> 测试配置</a></li>
         </ul>
     </li>
     <li class="slide">
